# system-integration-assignments

./: .gitignore  README.md
assignment-1/: readme.md
assignment-1/files/: user.csv  user.json  user.yaml
assignment-1/javascript/: app.js  package.json
assignment-1/python/: main.py
assignment-1/python/libs/: LibraryA.py  Parsers.py  __init__.py
assignment-1/rust/: Cargo.toml
assignment-1/rust/src/: main.rs
assignment-1/rust/src/data_types/: user.rs
assignment-1/rust/src/util/: mod.rs
assignment-1/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
assignment-1/typescript/src/: main.ts
assignment-1/typescript/src/utils/: file-reader.ts  parsers.ts
assignment-2/data-format-translation/: readme.md
assignment-2/data-format-translation/files/: user.json  user.txt  user.xml
assignment-2/data-format-translation/python/: main.py  pyproject.toml
assignment-2/data-format-translation/python/libs/: Parsers.py  __init__.py
assignment-2/data-format-translation/rust/: Cargo.toml
assignment-2/data-format-translation/rust/src/: handlers.rs  main.rs  route_handlers.rs
assignment-2/data-format-translation/rust/src/data_types/: mod.rs  user.rs
assignment-2/data-format-translation/rust/src/util/: buffer_generator.rs  buffer_parser.rs  mod.rs  utility_functions.rs
assignment-2/date-servers-part-1/: readme.md
assignment-2/date-servers-part-1/python/: pyproject.toml
assignment-2/date-servers-part-1/rust/src/data_types/: http_response.rs
assignment-2/date-servers/python/: main.py
assignment-2/date-servers/rust/src/data_types/: http_response.rs
assignment-3/date-servers-part-2/python/: main.py  pyproject.toml
assignment-3/date-servers-part-2/python/Datatypes/: DateTimeResponse.py  HttpResponse.py
assignment-3/date-servers-part-2/python/routers/: __init__.py  date_time.py  date_time_from_rust.py
assignment-3/date-servers-part-2/rust/: Cargo.toml
assignment-3/date-servers-part-2/rust/src/: main.rs
assignment-3/date-servers-part-2/rust/src/data_types/: date_time_response.rs  http_response.rs  mod.rs
assignment-3/date-servers-part-2/rust/src/routes/: routes.rs
in-class/06-sep/express-api-docs/: package.json  pnpm-lock.yaml
in-class/06-sep/express-api-docs/routers/: preferences.js  users.js
in-class/06-sep/python-api-docs/: main.py  pyproject.toml
in-class/06-sep/webhooks/node/: app.js
in-class/06-sep/webhooks/python/: webhook.py
in-class/30-aug/: weekly-rodin.md
in-class/30-aug/env-files/python/: main.py
in-class/30-aug/servers/fast-api/: main.py
in-class/30-aug/servers/quick_express/: app.js  package.json
in-class/30-aug/servers/quick_express/public/: duck.html
in-class/aug30/env-files/node/: main.js  package.json
in-class/aug30/env-files/python/: pyproject.toml
in-class/aug30/servers/fast-api/: main.py  pyproject.toml
in-class/oct-25/: formspage.html
in-class/oct-25/node/: app.js  package.json
in-class/oct-25/python/: index.html  main.py  pyproject.toml
in-class/sep-06/express-api-docs/: app.js
in-class/sep-06/python-api-docs/: main.py
in-class/sep-06/webhooks/node/: package.json
in-class/sep-06/webhooks/python/: main.py  pyproject.toml
in-class/sep-13/cors/: main.js  package.json  pnpm-lock.yaml
in-class/sep-13/cors/public/: index.html
in-class/sep-13/node/: main.js  package.json
in-class/sep-13/node/public/: index.html
(+1 files in other folders)
