[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.24", features = [ "serialize" ] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
dotenv = "0.15.0"
actix-web = "4"
env_logger = "0.9.0"