[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.24", features = [ "serialize" ] }
serde_json = "1.0"
actix-web = "4"
env_logger = "0.9"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
