[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["DryDish <57399961+DryDish@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
flake8 = "^5.0.4"
autoflake8 = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
